--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -25,7 +25,13 @@
     "check_out": "Check Out",
     "wishlist": "Wishlist",
     "add_to_wishlist": "Add to Wishlist",
-    "notifications": "Notifications"
+    "notifications": "Notifications",
+    "Explore More Books": "Explore More Books",
+    "No recommendations available": "No recommendations available",
+    "Check back later for personalized book suggestions": "Check back later for personalized book suggestions",
+    "Recommended Books": "Recommended Books",
+    "Books you might love based on your interests": "Books you might love based on your interests",
+    "Discover Amazing Books": "Discover Amazing Books"
   },
   "filter": {
     "title": "Filter",
@@ -65,7 +71,7 @@
     "tryAgainLater": "Please try again later",
     "Vietnamese": "Vietnamese",
     "English": "English",
-    "titleAZ": "Title A-Z", 
+    "titleAZ": "Title A-Z",
     "highestRated": "Highest Rated",
     "priceLowToHigh": "Price: Low to High",
     "priceHighToLow": "Price: High to Low",
@@ -150,9 +156,6 @@
       "secure": "Secure payment with SSL encryption",
       "privacy": "Privacy Policy",
       "terms": "Terms of Service",
-      "shipping": "Shipping Policy",
-      "return": "Return Policy",
-      "contact": "Contact Us",
       "policy": "Policy",
       "about": "About Us",
       "payment": "Payment",
@@ -168,7 +171,6 @@
       "specifications": "Specifications"
     },
     "specifications": "Specifications"
-
   },
   "wishlist": {
     "title": "Wishlist",
@@ -177,8 +179,7 @@
   "cart": {
     "clear_cart": "Clear Cart",
     "remove": "Remove",
-    "shipping_taxes": "Shipping Taxes",
-    "subtotal": "Subtotal",
+    "shopping_items": "Shopping Items",
     "checkout": "Checkout",
     "or": "Or",
     "continue_shopping": "Continue Shopping",
@@ -198,34 +199,10 @@
     "secure_checkout": "Secure Checkout",
     "your_payment_information_is_protected": "Your payment information is protected",
     "view_details": "View Details",
-    "total": "Total",
-    "ssl_encrypted_checkout": "SSL encrypted checkout",
-    "free_shipping_nationwide": "Free shipping nationwide",
-    "fast_delivery": "Fast Delivery",
     "return_policy": "30-day return policy",
     "money_back_guarantee": "Money Back Guarantee",
     "place_secure_order": "Place Secure Order",
     "processing_order": "Processing Order...",
-    "order_summary": "Order Summary",
-    "subtotal": "Subtotal",
-    "items": "items",
-    "shipping": "Shipping",
-    "calculated_at_checkout": "Calculated at checkout",
-    "tax": "Tax",
-    "total": "Total",
-    "ssl_encrypted_checkout": "SSL encrypted checkout",
-    "free_shipping_nationwide": "Free shipping nationwide",
-    "fast_delivery": "Fast Delivery",
-    "return_policy": "30-day return policy",
-    "money_back_guarantee": "Money Back Guarantee",
-    "place_secure_order": "Place Secure Order",
-    "processing_order": "Processing Order...",
-    "order_summary": "Order Summary",
-    "subtotal": "Subtotal",
-    "items": "items",
-    "shipping": "Shipping",
-    "calculated_at_checkout": "Calculated at checkout",
-    "tax": "Tax",
     "total": "Total",
     "ssl_encrypted_checkout": "SSL encrypted checkout",
     "free_shipping_nationwide": "Free shipping nationwide",
@@ -388,7 +365,16 @@
     "cta4": "Explore",
     "title5": "Fiction Favorites",
     "subtitle5": "Dive into captivating fictional worlds",
-    "cta5": "Read More"
+    "cta5": "Read More",
+    "Browse Collection": "Browse Collection",
+    "Explore": "Explore",
+    "Discover Amazing Stories": "Discover Amazing Stories",
+    "Business & Finance": "Business & Finance",
+    "Leadership": "Leadership",
+    "Horror & Thriller": "Horror & Thriller",
+    "Mystery": "Mystery",
+    "Adventure": "Adventure",
+    "Fantasy": "Fantasy"
   },
   "notifications": {
     "title": "Notifications",
@@ -408,7 +394,7 @@
       "read": "Read"
     }
   },
-  "orders":{
+  "orders": {
     "order_details": "Orders Details",
     "customer_info": "Customer Info",
     "shipping_info": "Shipping Info",
@@ -434,5 +420,131 @@
     "payment_status_pending": "Pending",
     "payment_status_paid": "Paid",
     "payment_status_failed": "Failed"
+  },
+  "interactiveBook": {
+    "title": "Book Explorer",
+    "subtitle": "Discover and purchase your next favorite book with our interactive shopping experience",
+    "cart_items": "items",
+    "saved_items": "saved",
+    "view_mode": {
+      "3d": "3D View",
+      "grid": "Grid View",
+      "list": "List View"
+    },
+    "what_are_you_looking_for": "What are you looking for?",
+    "shop_by_category": "Shop by Category",
+    "all_categories": "All Categories",
+    "books_count": "books",
+    "no_books_found": "No books found",
+    "try_adjusting_filters": "Try adjusting your filters",
+    "loading_explorer": "Loading Book Explorer...",
+    "fetching_data": "Fetching the latest books and categories",
+    "error_loading": "Error Loading Data",
+    "failed_to_fetch": "Failed to fetch books data from server",
+    "retry": "Retry",
+    "store_statistics": "Our Store Statistics",
+    "books_available": "Books Available",
+    "categories": "Categories",
+    "happy_customers": "Happy Customers",
+    "total_value": "Total Value",
+    "why_shop_with_us": "Why Shop With Us?",
+    "fast_delivery": "Fast Delivery",
+    "free_shipping": "Free shipping on orders over 500k VND",
+    "best_prices": "Best Prices",
+    "competitive_prices": "Competitive prices with regular discounts",
+    "quality_guarantee": "Quality Guarantee",
+    "authentic_books": "100% authentic books with return policy",
+    "previous": "Previous",
+    "next": "Next",
+    "out_of_stock": "Out of Stock",
+    "add_to_cart": "Add to Cart",
+    "buy_now": "Buy Now",
+    "view_details": "View Details",
+    "save": "Save",
+    "publisher": "Publisher",
+    "tags": "Tags",
+    "pages": "Pages",
+    "in_stock": "In Stock",
+    "language": "Language",
+    "level": "Level",
+    "saved": "Saved",
+    "save_for_later": "Save for Later",
+    "loading": "Loading...",
+    "books": "books",
+    "Bussines": "Business",
+    "Fiction": "Fiction",
+    "Adventure": "Adventure",
+    "Manga": "Manga",
+    "Horror": "Horror",
+    "Mystery": "Mystery",
+    "Romance": "Romance",
+    "Non-Fiction": "Non-fiction",
+    "moods": {
+      "bestsellers": "Bestsellers",
+      "top_selling": "Top selling books",
+      "philosophy_desc": "Philosophy",
+      "bestseller_desc": "Best sellers",
+      "adventure_desc": "Adventure",
+      "inspiring_desc": "Inspiring",  
+      "romantic_desc": "Romantic",
+      "suspenseful_desc": "Suspenseful",
+      "thoughtful_desc": "Thoughtful",
+      "deep_thinking": "Deep thinking books",
+      "thrillers": "Thrillers",
+      "edge_of_seat": "Edge-of-seat stories",
+      "self_help": "Self-Help",
+      "personal_development": "Personal development",
+      "adventure": "Adventure",
+      "inspiring": "Inspiring",
+      "motivational": "Motivational",
+      "romantic": "Romantic",
+      "suspenseful": "Suspenseful",
+      "thoughtful": "Thoughtful",
+      "bestseller": "Bestseller",
+      "epic_journeys": "Epic journeys",
+      "fantasy": "Fantasy",
+      "mystery": "Mystery",
+      "horror": "Horror",
+      "romance_desc": "Romance",
+      "science_fiction": "Science Fiction",
+      "biography": "Biography"
+      
+    },
+    "recommendations": {
+      "title": "Recommendations",
+      "subtitle": "Discover books that might interest you based on your reading history and preferences",
+      "no_recommendations": "No recommendations available",
+      "check_back_later": "Check back later for personalized book suggestions"
+    }
+  },
+  "profile": {
+    "edit_profile": "Edit Profile",
+    "cancel": "Cancel",
+    "full_name": "Full Name",
+    "email_address": "Email Address",
+    "phone_number": "Phone Number",
+    "address_information": "Address Information",
+    "street_address": "Street Address",
+    "city": "City",
+    "country": "Country",
+    "zip_code": "Zip Code",
+    "save_changes": "Save Changes",
+    "saving": "Saving...",
+    "enter_full_name": "Enter your full name",
+    "enter_email_address": "Enter your email address",
+    "enter_phone_number": "Enter your phone number",
+    "enter_street_address": "Enter your street address",
+    "enter_city": "Enter your city",
+    "enter_country": "Enter your country",
+    "enter_zip_code": "Enter your zip code",
+    "my_profile": "My Profile",
+    "manage_personal_info": "Manage Personal Info",
+    "personal_information": "Personal Information",
+    "verified_account": "Verified Account",
+    "account_security": "Account Security",
+    "two_factor_authentication_enabled": "Two-Factor Authentication Enabled",
+    "profile_completed": "Profile Completed",
+    "profile_completion": "Profile Completion"
+
   }
 }
