--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -25,7 +25,13 @@
     "check_out": "Thanh toán",
     "wishlist": "Danh sách yêu thích",
     "add_to_wishlist": "Thêm vào danh sách yêu thích",
-    "notifications": "Thông báo"
+    "notifications": "Thông báo",
+    "Explore More Books": "Khám phá thêm sách",
+    "No recommendations available": "Không có gợi ý sách",
+    "Check back later for personalized book suggestions": "Kiểm tra lại sau để có gợi ý sách cá nhân hóa",
+    "Recommended Books": "Sách được đề xuất",
+    "Books you might love based on your interests": "Sách bạn có thể thích dựa trên sở thích của bạn",
+    "Discover Amazing Books": "Bước vào thế giới sách đầy kỳ diệu"
   },
   "filter": {
     "title": "Bộ lọc",
@@ -139,7 +145,7 @@
     "pages": "Trang",
     "isbn": "ISBN",
     "available": "Có sẵn",
-    "delivery": { 
+    "delivery": {
       "free": "Miễn phí vận chuyển toàn quốc cho đơn hàng trên 20$",
       "city": "Trong nội thành nhận hàng trong 1-2 ngày",
       "province": "Các tỉnh khác nhận hàng từ 2-5 ngày",
@@ -169,7 +175,7 @@
     "clear_cart": "Xóa toàn bộ sản phẩm",
     "remove": "Xóa",
     "shipping_taxes": "Phí vận chuyển",
-    "subtotal": "Tổng cộng",
+    "shopping_items": "Sản phẩm",
     "checkout": "Thanh toán",
     "or": "Hoặc",
     "continue_shopping": "Tiếp tục mua hàng",
@@ -364,7 +370,16 @@
     "cta4": "Khám phá",
     "title5": "Sách viễn tưởng",
     "subtitle5": "Khám phá thế giới viễn tưởng",
-    "cta5": "Đọc thêm"
+    "cta5": "Đọc thêm",
+    "Browse Collection": "Khám phá sách",
+    "Explore": "Khám phá",
+    "Discover Amazing Stories": "Khám phá câu chuyện tuyệt vời",
+    "Business & Finance": "Kinh doanh & Tài chính",
+    "Leadership": "Lãnh đạo",
+    "Horror & Thriller": "Kinh dị & Bịp bịp",
+    "Mystery": "Bí ẩn",
+    "Adventure": "Phiêu lưu",
+    "Fantasy": "Viễn tưởng"
   },
   "notifications": {
     "title": "Thông báo",
@@ -385,7 +400,7 @@
       "read": "Đã đọc"
     }
   },
-  "orders":{
+  "orders": {
     "order_details": "Chi tiết đơn hàng",
     "customer_info": "Thông tin khách hàng",
     "shipping_info": "Thông tin vận chuyển",
@@ -411,5 +426,131 @@
     "payment_status_pending": "Chờ thanh toán",
     "payment_status_paid": "Đã thanh toán",
     "payment_status_failed": "Thất bại"
+  },
+  "interactiveBook": {
+    "title": "Khám Phá Sách",
+    "subtitle": "Khám phá và mua sắm cuốn sách yêu thích tiếp theo của bạn với trải nghiệm mua sắm tương tác",
+    "cart_items": "sản phẩm",
+    "saved_items": "đã lưu",
+    "view_mode": {
+      "3d": "Xem 3D",
+      "grid": "Xem lưới",
+      "list": "Xem danh sách"
+    },
+    "what_are_you_looking_for": "Bạn đang tìm kiếm gì?",
+    "shop_by_category": "Mua sắm theo thể loại",
+    "all_categories": "Tất cả thể loại",
+    "books_count": "sách",
+    "no_books_found": "Không tìm thấy sách",
+    "try_adjusting_filters": "Hãy thử điều chỉnh bộ lọc của bạn",
+    "loading_explorer": "Đang tải Khám Phá Sách...",
+    "fetching_data": "Đang tải sách và thể loại mới nhất",
+    "error_loading": "Lỗi Tải Dữ Liệu",
+    "failed_to_fetch": "Không thể tải dữ liệu sách từ máy chủ",
+    "retry": "Thử lại",
+    "store_statistics": "Thống Kê Cửa Hàng",
+    "books_available": "Sách Có Sẵn",
+    "categories": "Thể Loại",
+    "happy_customers": "Khách Hàng Hài Lòng",
+    "total_value": "Tổng Giá Trị",
+    "why_shop_with_us": "Tại Sao Nên Mua Sắm Với Chúng Tôi?",
+    "fast_delivery": "Giao Hàng Nhanh",
+    "free_shipping": "Miễn phí vận chuyển cho đơn hàng trên 500k VND",
+    "best_prices": "Giá Tốt Nhất",
+    "competitive_prices": "Giá cạnh tranh với nhiều ưu đãi thường xuyên",
+    "quality_guarantee": "Đảm Bảo Chất Lượng",
+    "authentic_books": "100% sách chính hãng với chính sách đổi trả",
+    "previous": "Trước",
+    "next": "Tiếp",
+    "out_of_stock": "Hết Hàng",
+    "add_to_cart": "Thêm Vào Giỏ",
+    "buy_now": "Mua Ngay",
+    "view_details": "Xem Chi Tiết",
+    "save": "Tiết Kiệm",
+    "publisher": "Nhà Xuất Bản",
+    "tags": "Thẻ",
+    "pages": "Trang",
+    "in_stock": "Còn Hàng",
+    "language": "Ngôn Ngữ",
+    "level": "Cấp Độ",
+    "saved": "Đã Lưu",
+    "save_for_later": "Lưu Để Xem Sau",
+    "loading": "Đang tải...",
+    "books": "sách",
+    "Bussines": "Kinh Doanh",
+    "Fiction": "Viễn Tưởng",
+    "Adventure": "Phiêu Lưu",
+    "Manga": "Manga",
+    "Horror": "Kinh Dị",
+    "Mystery": "Bí ẩn",
+    "Non-Fiction": "Phi hư cấu",
+    "moods": {
+      "bestsellers": "Sách Bán Chạy",
+      "top_selling": "Sách bán chạy nhất",
+      "romance": "Tình Cảm",
+      "love_stories": "Tuyển tập truyện tình yêu",
+      "philosophy": "Triết Học",
+      "deep_thinking": "Sách tư duy sâu sắc",
+      "thrillers": "Kinh Dị",
+      "edge_of_seat": "Truyện ly kỳ hấp dẫn",
+      "self_help": "Tự Phát Triển",
+      "personal_development": "Phát triển bản thân",
+      "adventure": "Phiêu Lưu",
+      "epic_journeys": "Những cuộc phiêu lưu kỳ thú",
+      "fantasy": "Viễn Tưởng",
+      "mystery": "Bí ẩn",
+      "horror": "Kinh Dị",
+      "romance_desc": "Tình Cảm",
+      "science_fiction": "Viễn Tưởng Khoa Học",
+      "biography": "Biography",
+      "inspiring": "Thương Nhớ",
+      "motivational": "Kích Thích",
+      "romantic": "Tình Cảm",
+      "suspenseful": "Kinh Dị",
+      "thoughtful": "Tư Duy",
+      "bestseller": "Sách Bán Chạy",
+      "epic_journeys_desc": "Những cuộc phiêu lưu kỳ thú",
+      "fantasy_desc": "Viễn Tưởng",
+      "mystery_desc": "Bí ẩn",
+      "horror_desc": "Kinh Dị",
+      "romance_desc": "Tình Cảm",
+      "science_fiction_desc": "Viễn Tưởng Khoa Học",
+      "biography_desc": "Biography",
+      "inspiring_desc": "Thương Nhớ",
+      "motivational_desc": "Kích Thích",
+      "romantic_desc": "Tình Cảm",
+      "suspenseful_desc": "Kinh Dị",
+      "thoughtful_desc": "Tư Duy",
+      "bestseller_desc": "Sách Bán Chạy"
+    }
+  },
+  "profile": {
+    "edit_profile": "Chỉnh sửa hồ sơ",
+    "cancel": "Hủy bỏ",
+    "full_name": "Tên đầy đủ",
+    "email_address": "Địa chỉ email",
+    "phone_number": "Số điện thoại",
+    "address_information": "Thông tin địa chỉ", 
+    "street_address": "Địa chỉ",
+    "city": "Thành phố",
+    "country": "Quốc gia",
+    "zip_code": "Mã bưu điện",
+    "save_changes": "Lưu thay đổi",
+    "saving": "Đang lưu...",
+    "enter_full_name": "Nhập tên đầy đủ",
+    "enter_email_address": "Nhập địa chỉ email",
+    "enter_phone_number": "Nhập số điện thoại",
+    "enter_street_address": "Nhập địa chỉ",
+    "enter_city": "Nhập thành phố",
+    "enter_country": "Nhập quốc gia",
+    "enter_zip_code": "Nhập mã bưu điện",
+    "my_profile": "Hồ sơ của tôi",
+    "manage_personal_info": "Quản lý thông tin cá nhân",
+    "personal_information": "Thông tin cá nhân",
+    "verified_account": "Tài khoản đã xác thực",
+    "account_security": "Bảo mật tài khoản",
+    "two_factor_authentication_enabled": "Bảo mật hai yếu tố đã bật",
+    "profile_complete": "Hồ sơ đã hoàn tất",
+    "profile_completion": "Hoàn tất hồ sơ"
   }
 }
