--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -98,7 +98,8 @@
     "newArrivals": "New Arrivals",
     "bestsellers": "Bestsellers",
     "Top Sales": "Top Sales",
-    "Hottest deals & biggest discounts": "Hottest deals & biggest discounts"
+    "Hottest deals & biggest discounts": "Hottest deals & biggest discounts",
+    "no_discounts": "No discounts available at the moment"
   },
   "books": {
     "title": "Books",
@@ -182,12 +183,28 @@
     "shopping_items": "Shopping Items",
     "checkout": "Checkout",
     "or": "Or",
+    "enter_voucher": "Enter Voucher",
+    "enter_your_street_address": "Enter your street address",
+    "enter_your_zip_code": "Enter your zipcode",
+    "invalid_phone_number": "Invalid phone number",
+    "apply": "Apply",
+    "voucher_applied": "Voucher applied",
     "continue_shopping": "Continue Shopping",
     "cart": "Cart",
     "cart_empty": "Your cart is empty",
     "please_login": "Please login to add to cart",
     "cart_empty_description": "Discover amazing books and add them to your cart!",
     "start_shopping": "Start Shopping",
+    "invalid_voucher": "Invalid voucher code",
+    "please_select_a_payment_method": "Please select a payment method",
+    "please_wait_while_we_load_your_profile_data": "Please wait while we load your profile data",
+    "user_data_not_loaded_please_try_again": "User data not loaded. Please try again.",
+    "error": "Error",
+    "your_cart_is_empty": "Your cart is empty",
+    "full_name_is_required": "Full Name is required",
+    "Voucher code and order amount are required": "Voucher code and order amount are required",
+    "Invalid or expired voucher code": "Invalid or expired voucher code",
+    "enter_phone_number": "Enter your phone number",
     "order_summary": "Order Summary",
     "subtotal": "Subtotal",
     "items": "items",
@@ -397,6 +414,21 @@
   "orders": {
     "order_details": "Orders Details",
     "customer_info": "Customer Info",
+    "start_shopping": "Start Shopping",
+    "quantity": "Quantity",
+    "error_loading": "Error loading orders",
+    "unknown_product": "Unknown Product",
+    "voucher_code": "Voucher Code",
+    "discount": "Discount",
+    "price_after_discount": "Price After Discount",
+    "shipping_fee": "Shipping Fee",
+    "payment_shipping": "Payment & Shipping",
+    "order_date": "Order Date",
+    "pending": "Pending",
+    "free": "Free",
+    "processing": "Processing",
+    "shipped": "Shipped",
+    "delivered": "Delivered",
     "shipping_info": "Shipping Info",
     "payment_info": "Payment Info",
     "customer_name": "Customer Name",
@@ -545,6 +577,23 @@
     "two_factor_authentication_enabled": "Two-Factor Authentication Enabled",
     "profile_completed": "Profile Completed",
     "profile_completion": "Profile Completion"
-
+  },
+  "thank": {
+    "Order Confirmed": "Order Confirmed",
+    "Processing": "Processing",
+    "Shipping": "Shipping",
+    "Delivered": "Delivered",
+    "Thank You for Your Order!": "Thank You for Your Order!",
+    "Order}": "Order",
+    "Order Status": "Order Status",
+    "Contact our support team if you have any questions about your order.": "Contact our support team if you have any questions about your order.",
+    "Return to Home": "Return to Home",
+    "View Orders": "View Orders",
+    "What's Next?": "What's Next?",
+    "You'll receive an email confirmation with your order details and tracking information once your order ships.": "You'll receive an email confirmation with your order details and tracking information once your order ships.",
+    "Your order has been successfully placed and is being processed": "Your order has been successfully placed and is being processed",
+    "Processing Time": "Processing Time",
+    "Need Help?": "Need Help?",
+    "Our support team is here to help you": "Our support team is here to help you"
   }
 }
