--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -104,7 +104,8 @@
     "newArrivals": "Sách mới",
     "bestsellers": "Sách bán chạy",
     "Top Sales": "Siêu giảm giá",
-    "Hottest deals & biggest discounts": "Siêu giảm giá & giảm giá lớn nhất"
+    "Hottest deals & biggest discounts": "Siêu giảm giá & giảm giá lớn nhất",
+    "no_discounts": "Không có khuyến mãi"
   },
   "books": {
     "title": "Sách",
@@ -174,10 +175,25 @@
   "cart": {
     "clear_cart": "Xóa toàn bộ sản phẩm",
     "remove": "Xóa",
+    "enter_voucher": "Nhập mã giảm giá",
+    "invalid_phone_number": "Số điện thoại không hợp lệ",
+    "enter_your_street_address": "Nhập địa chỉ của bạn",
+    "enter_your_zip_code": "Nhập mã bưu điện của bạn",
+    "apply": "Áp dụng",
+    "voucher_applied": "Mã giảm giá đã được áp dụng",
     "shipping_taxes": "Phí vận chuyển",
     "shopping_items": "Sản phẩm",
     "checkout": "Thanh toán",
     "or": "Hoặc",
+    "invalid_voucher": "Mã giảm giá không hợp lệ",
+    "please_select_a_payment_method": "Vui lòng chọn phương thức thanh toán",
+    "please_wait_while_we_load_your_profile_data": "Vui lòng chờ trong khi chúng tôi tải dữ liệu hồ sơ của bạn",
+    "user_data_not_loaded_please_try_again": "Dữ liệu hồ sơ không được tải. Vui lòng thử lại.",
+    "error": "Lỗi",
+    "full_name_is_required": "Họ và tên là bắt buộc",
+    "Voucher code and order amount are required": "Không đủ điều kiện để sử dụng mã giảm giá",
+    "Invalid or expired voucher code": "Mã giảm giá không hợp lệ hoặc đã hết hạn",
+    "your_cart_is_empty": "Giỏ hàng của bạn trống",
     "continue_shopping": "Tiếp tục mua hàng",
     "cart": "Giỏ hàng",
     "cart_empty": "Giỏ hàng của bạn trống",
@@ -403,6 +419,21 @@
   "orders": {
     "order_details": "Chi tiết đơn hàng",
     "customer_info": "Thông tin khách hàng",
+    "start_shopping": "Mua hàng",
+    "quantity": "Số lượng",
+    "product_name": "Tên sản phẩm",
+    "price": "Giá",
+    "discount": "Giảm giá",
+    "price_after_discount": "Giá sau giảm giá",
+    "shipping_fee": "Phí vận chuyển",
+    "payment_shipping": "Thanh toán & Giao hàng",
+    "voucher_code": "Mã voucher",
+    "pending": "Chờ xác nhận",
+    "free": "Miễn phí",
+    "processing": "Đang xử lý",
+    "shipped": "Đã giao hàng",
+    "delivered": "Đã giao hàng",
+    "order_date": "Ngày đặt hàng",
     "shipping_info": "Thông tin vận chuyển",
     "payment_info": "Thông tin thanh toán",
     "customer_name": "Tên khách hàng",
@@ -552,5 +583,22 @@
     "two_factor_authentication_enabled": "Bảo mật hai yếu tố đã bật",
     "profile_complete": "Hồ sơ đã hoàn tất",
     "profile_completion": "Hoàn tất hồ sơ"
+  },
+  "thank": {
+    "Order Confirmed": "Đơn hàng đã được xác nhận",
+    "Processing": "Đang xử lý",
+    "Shipping": "Đang vận chuyển",
+    "Delivered": "Đã giao hàng",
+    "Thank You for Your Order!": "Cảm ơn bạn đã đặt hàng",
+    "Order": "Đơn hàng",
+    "Order Status": "Trạng thái đơn hàng",
+    "Contact our support team if you have any questions about your order.": "Liên hệ với đội hỗ trợ khách hàng nếu bạn có bất kỳ câu hỏi nào về đơn hàng của bạn.",
+    "Return to Home": "Trở lại trang chủ",
+    "View Orders": "Xem đơn hàng",
+    "Your order has been successfully placed and is being processed": "Đơn hàng của bạn đã được đặt thành công và đang được xử lý",
+    "Processing Time": "Thời gian xử lý",
+    "Need Help?": "Cần trợ giúp?",
+    "Our support team is here to help you": "Đội hỗ trợ của chúng tôi sẵn sàng giúp bạn",
+    "Your order will be processed within 1-2 business days. You'll receive a confirmation email shortly.": "Đơn hàng của bạn sẽ được xử lý trong 1-2 ngày làm việc. Bạn sẽ nhận được email xác nhận sớm."
   }
 }
