--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -149,7 +149,7 @@
       "write_a_review": "Write a Review",
       "review": "Your Review",
       "rating": "Your Rating",
-      "error":"Error"
+      "error": "Error"
     },
     "delivery": {
       "free": "Free nationwide express delivery for orders over 20$",
@@ -180,10 +180,15 @@
   },
   "cart": {
     "clear_cart": "Clear Cart",
+    "clear_warning": "  ",
+    "yes_clear": "Yes",
+    "cancel":"Cancel",
+    "loading_checkout":"Loading checkout now",
+    "confirm_clear": "Do you confirm that you want to remove all products from your shopping cart?",
     "remove": "Remove",
     "shopping_items": "Shopping Items",
     "checkout": "Checkout",
-    "street_address":"Street Address",
+    "street_address": "Street Address",
     "or": "Or",
     "enter_voucher": "Enter Voucher",
     "enter_your_street_address": "Enter your street address",
@@ -216,7 +221,7 @@
     "tax": "Tax",
     "quantity": "Quantity",
     "free": "Free",
-    "login_now":"Login now",
+    "login_now": "Login now",
     "secure_checkout": "Secure Checkout",
     "your_payment_information_is_protected": "Your payment information is protected",
     "view_details": "View Details",
