--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -174,6 +174,11 @@
   },
   "cart": {
     "clear_cart": "Xóa toàn bộ sản phẩm",
+    "confirm_clear": "Bạn có xác nhận xóa tất cả sản phẩm trong giỏ hàng không?",
+    "clear_warning": "  ",
+    "yes_clear": "Đồng ý",
+    "loading_checkout": "Đang chuyển đến trang thanh toán",
+    "cancel": "Hủy bỏ",
     "remove": "Xóa",
     "enter_voucher": "Nhập mã giảm giá",
     "invalid_phone_number": "Số điện thoại không hợp lệ",
